Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -306,10 +306,12 @@
     "component": "Component",
     "concept": "Concepte",
     "conditions": "condicions",
+    "configure": "Configurar",
     "configure-columns": "Configurador de columnes",
     "confirm": "Confirmar",
     "confirm-delete": "Confirma esborrat?",
     "connect": "Connectar",
+    "connect-to-qz-tray": "Connectar a QZ Tray",
     "contact": "Contacte",
     "contact-data": "Dades de contacte",
     "contact-info": "Informació de contacte",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Magatzem de destí",
     "detail": "Detall",
     "details": "Detalls",
+    "detected-usb-devices": "Dispositius USB detectats",
     "difference": "Diferència",
     "different-passwords": "Les claus no coincideixen %userNick%",
     "different-than": "Diferent que",
@@ -976,6 +979,7 @@
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
+    "manual-configuration": "Configuració manual",
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
@@ -1073,6 +1077,7 @@
     "no-admin": "No administrador",
     "no-data": "No hi ha dades",
     "no-data-received-form": "Cap dada rebuda per formulari",
+    "no-devices-detected-scan-usb": "No s'han detectat dispositius. Proveu a escanejar.",
     "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap forat trobat",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Quantitat restant",
     "quantity-served": "Quantitat servida",
     "quantity-sold": "Quant. Venuda",
+    "qz-tray-connected": "QZ Tray connectat",
+    "qz-tray-connected-successfully": "Connectat a QZ Tray correctament.",
     "randomizer-generating-more-items": "Generant més elements",
     "rate": "Tarifa",
     "rates": "Tarifes",
@@ -1405,6 +1412,7 @@
     "save": "Desar",
     "save-data": "Desar dades",
     "save-filter": "Desa el filtre",
+    "scan-usb-devices": "Escanejar dispositius USB",
     "sdk": "SDK",
     "search": "Cercar",
     "search-document": "Escriu el número de %doctype% per cercar.",
