--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -306,10 +306,12 @@
     "component": "Bestandteil",
     "concept": "Konzept",
     "conditions": "Bedingungen",
+    "configure": "Konfigurieren",
     "configure-columns": "Spaltenkonfigurator",
     "confirm": "Bestätigen",
     "confirm-delete": "Löschen bestätigen?",
     "connect": "Verbinden",
+    "connect-to-qz-tray": "Mit QZ Tray verbinden",
     "contact": "Kontakt",
     "contact-data": "Kontaktdaten",
     "contact-info": "Kontakt Informationen",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
     "details": "Details",
+    "detected-usb-devices": "Erkannte USB-Geräte",
     "difference": "Unterschied",
     "different-passwords": "Passwörter stimmen nicht überein %1$s",
     "different-than": "Anders als",
@@ -976,6 +979,7 @@
     "manage": "Verwalten",
     "manage-installation": "Verwalten",
     "manual": "Handbuch",
+    "manual-configuration": "Manuelle Konfiguration",
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
@@ -1073,6 +1077,7 @@
     "no-admin": "Kein Administrator",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
+    "no-devices-detected-scan-usb": "Es wurden keine Geräte erkannt. Versuchen Sie es mit einem Scan.",
     "no-document-selected": "Es wurde kein Dokument ausgewählt.",
     "no-extra-lines": "Keine zusätzlichen Zeilen hinzufügen",
     "no-gaps-found": "Keine Lücken gefunden",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Verbleibende Menge",
     "quantity-served": "Anzahl serviert",
     "quantity-sold": "Verkaufte Menge",
+    "qz-tray-connected": "QZ Tray verbunden",
+    "qz-tray-connected-successfully": "Conectado a QZ Tray correctamente.",
     "randomizer-generating-more-items": "Generiere weitere Elemente...",
     "rate": "Rate",
     "rates": "Preise",
@@ -1405,6 +1412,7 @@
     "save": "speichern",
     "save-data": "Daten speichern",
     "save-filter": "Filter speichern",
+    "scan-usb-devices": "USB-Geräte scannen",
     "sdk": "SDK",
     "search": "Suche",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
