--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -306,10 +306,12 @@
     "component": "Component",
     "concept": "Concept",
     "conditions": "Conditions",
+    "configure": "Configure",
     "configure-columns": "Column Configurator",
     "confirm": "Confirm",
     "confirm-delete": "Confirm delete?",
     "connect": "Connect",
+    "connect-to-qz-tray": "Connect to QZ Tray.",
     "contact": "Contact",
     "contact-data": "Contact data",
     "contact-info": "Contact information",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
     "details": "Details",
+    "detected-usb-devices": "Detected USB devices.",
     "difference": "Difference",
     "different-passwords": "Passwords don't match for %userNick%",
     "different-than": "Different than",
@@ -976,6 +979,7 @@
     "manage": "Manage",
     "manage-installation": "Manage",
     "manual": "Manual",
+    "manual-configuration": "Manual configuration.",
     "manufacturer": "Manufacturer",
     "manufacturer-code": "Manufacturer code",
     "manufacturers": "Manufacturers",
@@ -1073,6 +1077,7 @@
     "no-admin": "Not an administrator",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-devices-detected-scan-usb": "No devices detected. Please try scanning.",
     "no-document-selected": "No document has been selected",
     "no-extra-lines": "No extra lines",
     "no-gaps-found": "No gaps found",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Remaining quantity",
     "quantity-served": "Quantity served",
     "quantity-sold": "Quantity sold",
+    "qz-tray-connected": "QZ Tray connected.",
+    "qz-tray-connected-successfully": "Successfully connected to QZ Tray.",
     "randomizer-generating-more-items": "Generating more items...",
     "rate": "Rate",
     "rates": "Rates",
@@ -1405,6 +1412,7 @@
     "save": "Save",
     "save-data": "Save data",
     "save-filter": "Save filter",
+    "scan-usb-devices": "Scan USB devices",
     "sdk": "SDK",
     "search": "Search",
     "search-document": "Type the number of %doctype% to search.",
