--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -306,10 +306,12 @@
     "component": "Osagaia",
     "concept": "Kontzeptua",
     "conditions": "Baldintzak",
+    "configure": "Konfiguratu",
     "configure-columns": "Zutabe konfiguratzailea",
     "confirm": "Baieztatu",
     "confirm-delete": "Ziur zaude hau kendu nahi duzula?",
     "connect": "Konektatu",
+    "connect-to-qz-tray": "QZ Tray-era konektatu",
     "contact": "Harremanetarako",
     "contact-data": "Kontaktuaren datuak",
     "contact-info": "Harremanetarako informazioa",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
     "details": "Xehetasunak",
+    "detected-usb-devices": "USB gailuak detektatu dira",
     "difference": "Diferentzia",
     "different-passwords": "%userNick% erabiltzailearen pasahitzak ez dira berdinak",
     "different-than": "Honen ezberdina",
@@ -976,6 +979,7 @@
     "manage": "Administratu",
     "manage-installation": "Kudeatu",
     "manual": "Eskuz",
+    "manual-configuration": "Konfigurazio manuala",
     "manufacturer": "Fabrikatzailea",
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
@@ -1073,6 +1077,7 @@
     "no-admin": "Ez da administratzaile",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
+    "no-devices-detected-scan-usb": "Ez dira gailuok detektatu. Saiatu eskaneatzen.",
     "no-document-selected": "Ez da dokumenturik hautatu",
     "no-extra-lines": "Ez gehitu lerro gehigarriak",
     "no-gaps-found": "Ez da hutsunerik aurkitu",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Gainerako zenbatekoa",
     "quantity-served": "Ateratako kopurua",
     "quantity-sold": "Saldutako kopurua",
+    "qz-tray-connected": "QZ Tray konektatuta",
+    "qz-tray-connected-successfully": "QZ Tray-rekin ondo konektatutako.",
     "randomizer-generating-more-items": "Elementu gehiago sortzen...",
     "rate": "Tarifa",
     "rates": "Tarifak",
@@ -1405,6 +1412,7 @@
     "save": "Gorde",
     "save-data": "Datuak gorde",
     "save-filter": "Gorde iragazkia",
+    "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Bilatu",
     "search-document": "Idatzi bilaketa egiteko %doctype% kopurua.",
