--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -306,10 +306,12 @@
     "component": "Composant",
     "concept": "Concept",
     "conditions": "Conditions",
+    "configure": "Configurer",
     "configure-columns": "Configurateur de colonne",
     "confirm": "Confirmer",
     "confirm-delete": "Confirmation de la suppression?",
     "connect": "Se connecter",
+    "connect-to-qz-tray": "Se connecter à QZ Tray",
     "contact": "Contact",
     "contact-data": "Données de contact",
     "contact-info": "Informations de contact",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
     "details": "Détails",
+    "detected-usb-devices": "Dispositifs USB détectés",
     "difference": "Différence",
     "different-passwords": "Les mots de passe ne correspondent pas %userNick%",
     "different-than": "Différent de",
@@ -976,6 +979,7 @@
     "manage": "Gérer",
     "manage-installation": "Gérer",
     "manual": "Manuel",
+    "manual-configuration": "Configuration manuelle",
     "manufacturer": "Fabricant",
     "manufacturer-code": "Code du fabricant",
     "manufacturers": "Fabricants",
@@ -1073,6 +1077,7 @@
     "no-admin": "Pas d'administration",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
+    "no-devices-detected-scan-usb": "Aucun appareil détecté. Essayez de numériser.",
     "no-document-selected": "Aucun document sélectionné",
     "no-extra-lines": "Pas de lignes supplémentaires",
     "no-gaps-found": "Aucune lacune constatée",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Montant restant",
     "quantity-served": "Quantité servie",
     "quantity-sold": "Quantité vendue",
+    "qz-tray-connected": "QZ Tray connecté",
+    "qz-tray-connected-successfully": "Connexion à QZ Tray réussie.",
     "randomizer-generating-more-items": "Génération de plus d'éléments…",
     "rate": "Taux",
     "rates": "Les taux",
@@ -1405,6 +1412,7 @@
     "save": "Sauvegarder",
     "save-data": "Enregistrer des données",
     "save-filter": "Enregistrer le filtre",
+    "scan-usb-devices": "Analyser les périphériques USB",
     "sdk": "SDK",
     "search": "Chercher",
     "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
