--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -306,10 +306,12 @@
     "component": "Compoñente",
     "concept": "Concepto",
     "conditions": "Condicións",
+    "configure": "Configurar",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
     "confirm-delete": "Desexa eliminar isto?",
     "connect": "Conectar",
+    "connect-to-qz-tray": "Conectar a QZ Tray",
     "contact": "Contacto",
     "contact-data": "Datos de contacto",
     "contact-info": "Información de contacto",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
+    "detected-usb-devices": "Dispositivos USB detectados",
     "difference": "Diferencia",
     "different-passwords": "Os contrasinais non coinciden para %userNick%",
     "different-than": "Diferente que",
@@ -976,6 +979,7 @@
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
+    "manual-configuration": "Configuración manual",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
@@ -1073,6 +1077,7 @@
     "no-admin": "Non administrador",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-devices-detected-scan-usb": "Non se detectaron dispositivos. Proba a escanear.",
     "no-document-selected": "Non se seleccionou ningún documento",
     "no-extra-lines": "Non engadir liñas extra",
     "no-gaps-found": "Ningún oco atopado",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Cantidade restante",
     "quantity-served": "cantidade servida",
     "quantity-sold": "Cant. vendida",
+    "qz-tray-connected": "QZ Tray conectado",
+    "qz-tray-connected-successfully": "Conectado a QZ Tray correctamente.",
     "randomizer-generating-more-items": "Xerando máis elementos...",
     "rate": "Taxa",
     "rates": "Taxas",
@@ -1405,6 +1412,7 @@
     "save": "Gardar",
     "save-data": "Gardar datos",
     "save-filter": "Gardar filtro",
+    "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
