--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -306,10 +306,12 @@
     "component": "Componente",
     "concept": "Concetto",
     "conditions": "Condizioni",
+    "configure": "Configurare",
     "configure-columns": "Configuratore colonne",
     "confirm": "Confermare",
     "confirm-delete": "Conferma cancellazione?",
     "connect": "Connettere",
+    "connect-to-qz-tray": "Connetti a QZ Tray",
     "contact": "Contatto",
     "contact-data": "Informazioni di contatto",
     "contact-info": "Informazioni sui contatti",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "details": "Dettagli",
+    "detected-usb-devices": "Dispositivi USB rilevati",
     "difference": "differenza",
     "different-passwords": "Le password non corrispondono %1$s",
     "different-than": "Diverso da",
@@ -976,6 +979,7 @@
     "manage": "gestire",
     "manage-installation": "Gestire",
     "manual": "manuale",
+    "manual-configuration": "Configurazione manuale",
     "manufacturer": "fabbricante",
     "manufacturer-code": "Codice produttore",
     "manufacturers": "Produttori",
@@ -1073,6 +1077,7 @@
     "no-admin": "Nessun amministratore",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
+    "no-devices-detected-scan-usb": "Nessun dispositivo rilevato. Prova a eseguire la scansione.",
     "no-document-selected": "Nessun documento selezionato",
     "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Nessun gap trovato",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Quantità rimanente",
     "quantity-served": "Quantità servita",
     "quantity-sold": "quantità venduta",
+    "qz-tray-connected": "QZ Tray connesso",
+    "qz-tray-connected-successfully": "Connesso a QZ Tray correttamente.",
     "randomizer-generating-more-items": "Generando più elementi...",
     "rate": "Tariffa",
     "rates": "Aliquote",
@@ -1405,6 +1412,7 @@
     "save": "salvare",
     "save-data": "Salvare i dati",
     "save-filter": "Salva Filtro",
+    "scan-usb-devices": "Scansione dispositivi USB",
     "sdk": "SDK",
     "search": "Ricerca",
     "search-document": "Inserisci il numero di %doctype% per cercare.",
