--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -306,10 +306,12 @@
     "component": "Komponent",
     "concept": "Koncepcja",
     "conditions": "Warunki",
+    "configure": "Konfigurować",
     "configure-columns": "Konfigurator kolumn",
     "confirm": "Potwierdzić",
     "confirm-delete": "Czy na pewno chcesz to usunąć?",
     "connect": "Połączyć",
+    "connect-to-qz-tray": "Połącz z QZ Tray",
     "contact": "Kontakt",
     "contact-data": "Dane kontaktowe",
     "contact-info": "Informacje kontaktowe",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Magazyn docelowy",
     "detail": "Szczegóły",
     "details": "Detalles",
+    "detected-usb-devices": "Wykryte urządzenia USB",
     "difference": "Różnica",
     "different-passwords": "Hasła nie pasują dla użytkownika %userNick%",
     "different-than": "Różny niż",
@@ -976,6 +979,7 @@
     "manage": "Zarządzaj",
     "manage-installation": "Zarządzaj",
     "manual": "Instrukcja obsługi",
+    "manual-configuration": "Konfiguracja ręczna",
     "manufacturer": "Producent",
     "manufacturer-code": "Kod producenta",
     "manufacturers": "Producenci",
@@ -1073,6 +1077,7 @@
     "no-admin": "Brak administratora",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
+    "no-devices-detected-scan-usb": "Nie wykryto urządzeń. Spróbuj zeskanować.",
     "no-document-selected": "Nie wybrano żadnego dokumentu",
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Pozostała ilość",
     "quantity-served": "Ilość wydana",
     "quantity-sold": "Ilość sprzedana",
+    "qz-tray-connected": "QZ Tray połączony",
+    "qz-tray-connected-successfully": "Prawidłowo połączono z QZ Tray.",
     "randomizer-generating-more-items": "Generowanie dodatkowych elementów...",
     "rate": "Stawka",
     "rates": "Stawki",
@@ -1405,6 +1412,7 @@
     "save": "Zapisz",
     "save-data": "Zapisz dane",
     "save-filter": "Zapisz filtr",
+    "scan-usb-devices": "Skanuj urządzenia USB",
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
