--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -306,10 +306,12 @@
     "component": "Component",
     "concept": "Concepte",
     "conditions": "Condicions",
+    "configure": "Configurar",
     "configure-columns": "Configurador de columnes",
     "confirm": "Confirmar",
     "confirm-delete": "¿Confirmes el borrat?",
     "connect": "Connectar",
+    "connect-to-qz-tray": "Connectar a QZ Tray",
     "contact": "Contacte",
     "contact-data": "Senyes del contacte",
     "contact-info": "Informació de contacte",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
     "details": "Detalls",
+    "detected-usb-devices": "Dispositius USB detectats",
     "difference": "Diferència",
     "different-passwords": "Les contrasenyes per a l'usuari %userNick% no coincidixen",
     "different-than": "Diferent de",
@@ -976,6 +979,7 @@
     "manage": "Administrar",
     "manage-installation": "Gestionar",
     "manual": "Manual",
+    "manual-configuration": "Configuración manual",
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
@@ -1073,6 +1077,7 @@
     "no-admin": "No és administrador",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
+    "no-devices-detected-scan-usb": "No s'han detectat dispositius. Proveu a escanejar.",
     "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap buit trobat",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Quantitat restant",
     "quantity-served": "Cantitat servida",
     "quantity-sold": "quantity-sold",
+    "qz-tray-connected": "QZ Tray connectat",
+    "qz-tray-connected-successfully": "Conectat a QZ Tray correctament.",
     "randomizer-generating-more-items": "Generant més elements...",
     "rate": "Tarifa",
     "rates": "Tarifes",
@@ -1405,6 +1412,7 @@
     "save": "Guarda",
     "save-data": "Almagasenar les senyes",
     "save-filter": "Alçar el filtre",
+    "scan-usb-devices": "Escanejar dispositius USB",
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
