--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -306,10 +306,12 @@
     "component": "Componente",
     "concept": "Concepto",
     "conditions": "Condiciones",
+    "configure": "Configurar",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
     "confirm-delete": "¿Realmente desea eliminar esto?",
     "connect": "Conectar",
+    "connect-to-qz-tray": "Conectar a QZ Tray",
     "contact": "Contacto",
     "contact-data": "Datos del contacto",
     "contact-info": "Información de contacto",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
+    "detected-usb-devices": "Dispositivos USB detectados",
     "difference": "Diferencia",
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
@@ -976,6 +979,7 @@
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
+    "manual-configuration": "Configuración manual",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
@@ -1073,6 +1077,7 @@
     "no-admin": "No administrador",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-devices-detected-scan-usb": "No se han detectado dispositivos. Pruebe a escanear.",
     "no-document-selected": "No se ha seleccionado ningún documento",
     "no-extra-lines": "No añadir líneas extra",
     "no-gaps-found": "Ningún hueco encontrado",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "Cant. servida",
     "quantity-sold": "Cant. vendida",
+    "qz-tray-connected": "QZ Tray conectado",
+    "qz-tray-connected-successfully": "Conectado a QZ Tray correctamente.",
     "randomizer-generating-more-items": "Generando más elementos...",
     "rate": "Tarifa",
     "rates": "Tarifas",
@@ -1405,6 +1412,7 @@
     "save": "Guardar",
     "save-data": "Guardar datos",
     "save-filter": "Guardar filtro",
+    "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Buscar",
     "search-document": "Escribe el número de %doctype% para buscar.",
