--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -306,10 +306,12 @@
     "component": "Componente",
     "concept": "Conceito",
     "conditions": "Condições",
+    "configure": "Configurar",
     "configure-columns": "Configurador de colunas",
     "confirm": "Confirmar",
     "confirm-delete": "Confirmar excluir?",
     "connect": "Conectar",
+    "connect-to-qz-tray": "Conectar ao QZ Tray",
     "contact": "Contato",
     "contact-data": "Dados de contato",
     "contact-info": "Informações de contato",
@@ -475,6 +477,7 @@
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
+    "detected-usb-devices": "Dispositivos USB detectados",
     "difference": "diferença",
     "different-passwords": "As senhas não correspondem para o usuário %userNick%",
     "different-than": "Diferente de",
@@ -976,6 +979,7 @@
     "manage": "Gerir",
     "manage-installation": "Gerenciar",
     "manual": "Manual",
+    "manual-configuration": "Configuração manual",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
@@ -1073,6 +1077,7 @@
     "no-admin": "Não administrador",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
+    "no-devices-detected-scan-usb": "Nenhum dispositivo foi detectado. Tente escanear.",
     "no-document-selected": "Nenhum documento selecionado",
     "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
@@ -1303,6 +1308,8 @@
     "quantity-remaining": "Quantidade restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
+    "qz-tray-connected": "QZ Tray conectado",
+    "qz-tray-connected-successfully": "Conectado ao QZ Tray com sucesso.",
     "randomizer-generating-more-items": "Gerando mais itens...",
     "rate": "Tarifa",
     "rates": "Tarifas",
@@ -1405,6 +1412,7 @@
     "save": "Salvar",
     "save-data": "Salvar dados",
     "save-filter": "Salvar Filtros",
+    "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Pesquisar",
     "search-document": "Digite o número do %doctype% para pesquisar.",
