Actualizadas las traducciones

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1012,7 +1012,7 @@
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
     "min-fs-version": "Min. verze jádra",
-    "min-php-version": "Min. v. PHP",
+    "min-php-version": "Min. verze PHP",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Stock mínimo",
@@ -1631,7 +1631,7 @@
     "thousands-separator": "Separador de millares",
     "thursday": "Jueves",
     "ticket": "Ticket",
-    "tickets": "Vstupenky",
+    "tickets": "Tikety",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
