--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -582,7 +582,7 @@
     "errors": "Fehler",
     "es_EC": "es_EC",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "Spanien: N3 nicht steuerpflichtig Art. 7 LIVA – Nicht steuerpflichtige Vorgänge (Einlagen, Übertragung von UEA, Muster…)",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
     "es-tax-exception-e2": "Spanien: Ausnahme nach Artikel 21 des Umsatzsteuergesetzes",
     "es-tax-exception-e3": "Spanien: Ausnahme nach Artikel 22 des Umsatzsteuergesetzes",
