--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1086,7 +1086,7 @@
     "no-plugins-installed": "Nessun plugin installato",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Senza riferimento",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Nessun risultato trovato",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
     "no-updates-now": "Non ci sono aggiornamenti in questo momento",
