--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Skrócony",
     "about": "O nas",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Musisz najpierw wprowadzić opis zapisu",
     "accept": "Zaakceptować",
     "accept-all": "Akceptuj wszystko",
     "accept-data": "Akceptować zmiany lub operację",
