--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -821,7 +821,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificação internacional",
     "intra-community": "Intra-comunitária",
-    "invalid-admin-username": "O nome de usuário do administrador não é válido: deve ter entre 3 e 50 caracteres, sem espaços.",
+    "invalid-admin-username": "O nome de utilizador do administrador não é válido: deve ter entre 3 e 50 caracteres, sem espaços.",
     "invalid-alphanumeric-code": "O código inserido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data %date% inválida.",
@@ -1426,7 +1426,7 @@
     "select": "Selecionar",
     "select-all": "selecionar-todos",
     "select-content-for": "Selecione o conteúdo para %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Você pode adicionar um arquivo aqui, selecioná-lo e enviá-lo do seu computador. Clique no botão 'Nenhum' se não quiser selecionar nenhum.",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecionar o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
