--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Sobre",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Tem de introduzir primeiro o conceito do lançamento.",
     "accept": "Aceitar",
     "accept-all": "Aceitar tudo",
     "accept-data": "Aceitar mudanças ou operação",
@@ -821,7 +821,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intra-comunitária",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "O nome de utilizador do administrador não é válido: deve ter entre 3 e 50 caracteres, sem espaços.",
     "invalid-alphanumeric-code": "O código introduzido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
