Actualizadas las traducciones.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -590,8 +590,8 @@
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
     "es-tax-exception-location-rules": "normas de localización de excepcións fiscais",
-    "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n1": "España: N1 No sujeta por reglas de localización en entregas de bienes (art. 68)",
+    "es-tax-exception-n5": "España: N5 No sujeta – disposiciones específicas (OTAN, convenios, etc.)",
     "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -821,7 +821,7 @@
     "interest": "Interese",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "O nome de usuario do administrador non é válido: debe ter entre 3 e 50 caracteres, sen espazos.",
     "invalid-alphanumeric-code": "O código introducido (%value%) non é válido. (%column%) debe ter entre %min% e %max% números ou letras, sin espazos, acentos, nin outros caracteres.",
     "invalid-column-lenght": "%column% deben ter %min% and %max% caracteres.",
     "invalid-date": "Data %date% non válida.",
