Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1416,7 +1416,7 @@
     "sdk": "SDK",
     "search": "Suche",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "In allen Seiten des Programms suchen",
     "search-message": "Nachricht suchen",
     "search-product": "Produkt suchen",
     "second-hand": "Z",
