--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1462,7 +1462,7 @@
     "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
-    "server-accepts-filesize": "Taille max. de téléchargement des fichiers",
+    "server-accepts-filesize": "Taille maximale des fichiers téléversés",
     "server-software": "Logiciel du serveur",
     "service": "Service",
     "services": "Services",
@@ -1784,7 +1784,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
-    "work-certification": "Certification",
+    "work-certification": "Attestation de travail",
     "work-events": "Événements de travail",
     "working-hours": "Heures de travail",
     "works": "Emplois",
