--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -904,7 +904,7 @@
     "last-activity": "Última activitat",
     "last-bimester": "El bimestre passat",
     "last-block": "last-block",
-    "last-duration": "Última duración",
+    "last-duration": "Última durada",
     "last-ip": "Última IP",
     "last-month": "El més passat",
     "last-price-estimation": "Últim preu de pressupost",
