--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1416,7 +1416,7 @@
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Buscar en todas as páxinas do programa",
     "search-message": "Procurar mensaxe",
     "search-product": "Buscar produto",
     "second-hand": "Segunda man",
@@ -1722,7 +1722,7 @@
     "use-holes-invoices-esp": "Se desmarcas o uso de ocos en facturas e eliminas algunha quedarase o oco na facturación e terás problemas con facenda",
     "user": "Usuario",
     "user-and-config": "Usuario e configuración",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Guía do usuario",
     "users": "Usuarios",
     "using-apc": "Usando caché APC",
     "using-filecache": "Usando Filecache",
