--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1416,7 +1416,7 @@
     "sdk": "SDK",
     "search": "Pesquisa",
     "search-document": "Digite o número de %doctype% para pesquisar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Pesquisar em todas as páginas do programa",
     "search-message": "Pesquisar mensagem",
     "search-product": "Procurar produto",
     "second-hand": "Em segunda mão",
